[package]
name = "serverless_sim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "serverless_sim"
path = "src/main.rs"



[dependencies]
rand = "0.8.5"
daggy = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
axum = "0.6.19"
env_logger = "0.9.3"
log = "0.4.11"
figlet-rs = "0.1.5"
clap = { version = "4", features = ["derive"] }
enum_dispatch = "0.3.12"
chrono = "0.4.26"
moka = "0.11.3"
priority-queue = "1.3.2"
enum-as-inner = "0.6.0"
#pyo3 = { version = "0.19.2", features = ["extension-module"] }
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
async-trait = "0.1.51"
parking_lot = "0.12"
rand_distr = "0.4.3"